--- a/.github/workflows/XDTesting.yml
+++ b/.github/workflows/XDTesting.yml
@@ -55,11 +55,9 @@ jobs:
             done < UserInput.txt
             if ((counter<4))
               then 
-                echo "check=False" >> $GITHUB_ENV
-                echo $check
+                echo "$check=False" >> $GITHUB_ENV
               else
-                echo "check=True" >> $GITHUB_ENV
-                echo $check
+                echo "$check=True" >> $GITHUB_ENV
             fi
  
       - name: Stop process
@@ -87,10 +85,10 @@ jobs:
           from rdflib.namespace import XSD
           try:
             q = prepareQuery(os.environ['PYTHON_ARG'], initNs={"foaf": FOAF ,"rdfs": RDFS, "rdf": RDF, "owl": OWL, "xsd": XSD},)
-            echo "SPARQLValidator=True" >> $GITHUB_ENV
+            echo "$SPARQLValidator=True" >> $GITHUB_ENV
           except Exception as error:
             #print(error)
-            echo "SPARQLValidator=False" >> $GITHUB_ENV
+            echo "$SPARQLValidator=False" >> $GITHUB_ENV
           END
           )"
             echo $validator_result
