--- a/.github/workflows/XDTesting.yml
+++ b/.github/workflows/XDTesting.yml
@@ -85,10 +85,10 @@ jobs:
           from rdflib.namespace import XSD
           try:
             q = prepareQuery(os.environ['PYTHON_ARG'], initNs={"foaf": FOAF ,"rdfs": RDFS, "rdf": RDF, "owl": OWL, "xsd": XSD},)
-            echo "$SPARQLValidator=True" >> $GITHUB_ENV
+            echo "SPARQLValidator=True" >> $GITHUB_ENV
           except Exception as error:
             #print(error)
-            echo "$SPARQLValidator=False" >> $GITHUB_ENV
+            echo "SPARQLValidator=False" >> $GITHUB_ENV
           END
           )"
             echo $validator_result
