--- a/.github/workflows/XDTesting.yml
+++ b/.github/workflows/XDTesting.yml
@@ -102,13 +102,16 @@ jobs:
                 SQstrresult=${BASH_REMATCH[1]}
               fi
             done <sparqlCQRequirements.txt
+          
           valResult=$(SPARQL_Validator "$SQstrresult")
           
-          if [$valResult == "Success!"]:
-            echo "SPARQLValidator=True" >> $GITHUB_ENV
-          else:
-            echo "SPARQLValidator=False" >> $GITHUB_ENV
+          if ($valResult = "Success!")
+            then
+              echo "SPARQLValidator=True" >> $GITHUB_ENV
+            else
+              echo "SPARQLValidator=False" >> $GITHUB_ENV
           fi
+          
           echo $SPARQLValidator
           
       - name: Run JSON validator
