--- a/.github/workflows/XDTesting.yml
+++ b/.github/workflows/XDTesting.yml
@@ -105,7 +105,7 @@ jobs:
           
           valResult=$(SPARQL_Validator "$SQstrresult")
           
-          if [ $valResult = "Success!" ]; then
+          if [ "$valResult" = "Success!" ]; then
             echo "SPARQLValidator=True" >> $GITHUB_ENV
           else
             echo "SPARQLValidator=False" >> $GITHUB_ENV
@@ -122,7 +122,6 @@ jobs:
           import json
           
           try:
-            print(os.environ['PYTHON_ARG'])
             json.loads(os.environ['PYTHON_ARG'])
             print("Correct!")
           except ValueError as error:
@@ -145,7 +144,7 @@ jobs:
           valResult=$(JSON_Validator "$ERstrresult")
           echo $valResult
           
-          if [ $valResult = "Success!" ]; then
+          if [ "$valResult" = "Success!" ]; then
             echo "JSONValidator=True" >> $GITHUB_ENV
           else
             echo "JSONValidator=False" >> $GITHUB_ENV
