--- a/.github/workflows/JSON-val.yml
+++ b/.github/workflows/JSON-val.yml
@@ -35,7 +35,8 @@ jobs:
               ERstrresult=${BASH_REMATCH[1]}
             fi
           done <erRequirements.txt
-  
+          
+          echo $ERstrresult
           valResult=$(JSON_Validator "$ERstrresult")
   
           echo "Evaluation result is"
