--- a/.github/workflows/JSON-val.yml
+++ b/.github/workflows/JSON-val.yml
@@ -17,6 +17,7 @@ jobs:
           import json
   
           try:
+            print(os.environ['PYTHON_ARG'])
             json.loads(os.environ['PYTHON_ARG'])
             print("Correct!")
           except ValueError as error:
