--- a/.github/workflows/JSON-val.yml
+++ b/.github/workflows/JSON-val.yml
@@ -34,17 +34,23 @@ jobs:
           while read line; do
             if [[ $line =~ :(.+) ]]; then
               ERstrresult=${BASH_REMATCH[1]}
+              valResult=$(JSON_Validator "$ERstrresult")
+              echo $valResult
+              if [ "$valResult" = "Success!" ]; then
+                echo "JSONValidator=True" >> $GITHUB_ENV
+              else
+                echo "JSONValidator=False" >> $GITHUB_ENV
+              fi
             fi
           done <erRequirements.txt
           
-          valResult=$(JSON_Validator "$ERstrresult")
+          # valResult=$(JSON_Validator "$ERstrresult")
+
+          # echo $valResult
   
-          echo "Evaluation result is"
-          echo $valResult
-  
-          if [ "$valResult" = "Success!" ]; then
-            echo "JSONValidator=True" >> $GITHUB_ENV
-          else
-            echo "JSONValidator=False" >> $GITHUB_ENV
-          fi
+          #if [ "$valResult" = "Success!" ]; then
+          #  echo "JSONValidator=True" >> $GITHUB_ENV
+          #else
+          #  echo "JSONValidator=False" >> $GITHUB_ENV
+          #fi
           
