--- a/.github/workflows/JSON-val.yml
+++ b/.github/workflows/JSON-val.yml
@@ -35,7 +35,7 @@ jobs:
             if [[ $line =~ :(.+) ]]; then
               ERstrresult=${BASH_REMATCH[1]}
               echo $ERstrresult
-              valResult=$(JSON_Validator "$ERstrresult")
+              valResult=$(JSON_Validator "${ERstrresult[0]}")
               echo $valResult
               if [ "$valResult" = "Success!" ]; then
                 echo "JSONValidator=True" >> $GITHUB_ENV
