--- a/.github/workflows/JSON-val.yml
+++ b/.github/workflows/JSON-val.yml
@@ -32,6 +32,7 @@ jobs:
           erRequirements=$(grep -i '[ER][0-9][0-9]*:\s' $erPath)
           echo "$erRequirements" > "erRequirements.txt"
           cat erRequirements.txt
+          echo $erRequirements
           while read -r line; do
             if [[ $line =~ :(.+) ]]; then
               ERstrresult=${BASH_REMATCH[1]}
