--- a/.github/workflows/JSON-val.yml
+++ b/.github/workflows/JSON-val.yml
@@ -31,12 +31,10 @@ jobs:
           erPath="ontology-network/musical-performance/RecordingProcess/ExpectedResults.txt"
           erRequirements=$(grep -i '[ER][0-9][0-9]*:\s' $erPath)
           echo "$erRequirements" > "erRequirements.txt"
-          cat erRequirements.txt
-          echo $erRequirements
           while read -r line; do
             if [[ $line =~ :(.+) ]]; then
               ERstrresult=${BASH_REMATCH[1]}
-              echo $ERstrresult
+              echo "The result is $ERstrresult"
             fi
             
             valResult=$(JSON_Validator "${ERstrresult[0]}")
