--- a/.github/workflows/JSON-val.yml
+++ b/.github/workflows/JSON-val.yml
@@ -37,7 +37,7 @@ jobs:
             fi
             
             param_test=' """{ "head": { "vars": ["recording" ] } , "results": { "bindings": [ { "recording": { "type": "uri" , "value": "https://raw.githubusercontent.com/YourUsername/YourRepository/main/ontology-network/musical-performance/RecordingProcess/SPARQLUnitTest/CQDataSet/ComeWithMe" } } ] } }""" '
-            valResult=$(JSON_Validator "$param")
+            valResult=$(JSON_Validator "$param_test")
             echo "Validation result is $valResult"
             if [ "$valResult" = "Success!" ]; then
               echo "nice"
