--- a/.github/workflows/01-execute-test.yml
+++ b/.github/workflows/01-execute-test.yml
@@ -20,6 +20,8 @@ jobs:
   
   # The type of runner that the job will run on.
     runs-on: ubuntu-latest
+    
+    steps:
         
       - name: Setup-JAVA
         uses: actions/setup-java@v2.4.0
