--- a/.github/workflows/01-execute-test.yml
+++ b/.github/workflows/01-execute-test.yml
@@ -4,7 +4,7 @@
 # Output: The execution of a test case. 
 
 # The name of the workflow
-name: XDTesting
+name: Execute test
 
 # The event that triggers the action.
 on: 
